Text Control: Increase font-size of the inputs on small screens to avoid iOS zoom

--- a/assets/components/src/text-control/style.scss
+++ b/assets/components/src/text-control/style.scss
@@ -37,13 +37,17 @@
 		border-radius: 3px;
 		box-shadow: none;
 		color: inherit;
-		font-size: inherit;
+		font-size: 16px;
 		line-height: inherit;
 		margin: 0;
 		min-height: 48px;
 		padding: 11px 8px;
 		transition: border-color 125ms ease-in-out, box-shadow 125ms ease-in-out;
 		width: 100%;
+
+		@media screen and ( min-width: 768px ) {
+			font-size: inherit;
+		}
 
 		&:focus {
 			border-color: $primary_color_darker;
